--- a/_posts/2020-10-13-Japan in 8K.md
+++ b/_posts/2020-10-13-Japan in 8K.md
@@ -1,1 +1,1 @@
-<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/qmN1Gf8rRc8"></iframe>
+<iframe width="400" height="500" src="https://www.youtube.com/embed/qmN1Gf8rRc8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
