--- a/_posts/2020-10-13-Japan in 8K.md
+++ b/_posts/2020-10-13-Japan in 8K.md
@@ -1,1 +1,1 @@
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/qmN1Gf8rRc8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="500" src="https://www.youtube.com/embed/qmN1Gf8rRc8"></iframe>
