--- a/_posts/2020-10-13-Japan in 8K.md
+++ b/_posts/2020-10-13-Japan in 8K.md
@@ -1,1 +1,1 @@
-<iframe width="100%" data-auto-height="true" src="https://www.youtube.com/embed/qmN1Gf8rRc8"></iframe>
+<iframe width="100%" data-auto-height="true" frameborder="0" src="https://www.youtube.com/embed/qmN1Gf8rRc8"></iframe>
