--- a/_posts/2021-03-28-आय विवरणमा मिस म्याच.md
+++ b/_posts/2021-03-28-आय विवरणमा मिस म्याच.md
@@ -2,7 +2,7 @@
 title:  "आय विवरणमा मिस म्याच"
 date:   2021-02-02 22:10:00 +0545
 categories: [Income Tax]
-Tags: [Taxation, IRD]
+tags: [Taxation, IRD]
 ---
 
 आय विवरण पेश गरिसकेपछि धेरै करदाताको साझा समस्या बनेको छ- मिस म्याच। धेरै करदाताको हिसाव किताबमा कर कार्यालयले मिसम्याच फेला पार्ने र त्यही आधारमा थप कर तथा जरिवाना लगाईँदै आएको छ। अधिकांश करदाताको टाउको दुखाएको मिसम्याचका कारण र समाधानका उपाय बारे यहाँ उल्लेख गरिएको छ।
